# magritte

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  STRUCTURE.md  magritte.ron  rustfmt.toml
.cargo/: config
backend/magritte-native-backend/: Cargo.toml
backend/magritte-native-backend/src/: entry.rs  lib.rs  loader.rs
backend/magritte-wasm-backend/: Cargo.toml
bins/magritte-doc-build/: Cargo.toml
bins/magritte-doc-build/src/: doc.rs  html.rs  main.rs  visitor.rs
bins/magritte-ron-build/: Cargo.toml
bins/magritte-ron-build/src/: main.rs
builders/magritte-native-backend-build/: Cargo.toml
builders/magritte-native-backend-build/src/: bitflags.rs  bits.rs  field.rs  lib.rs  main.rs  visitor.rs
builders/magritte-native-host-build/: Cargo.toml
builders/magritte-wasm-backend-build/: Cargo.toml
builders/magritte-wasm-host-build/: Cargo.toml
crates/magritte-build/: Cargo.toml
crates/magritte-build/src/: extensions.rs  lib.rs  rustfmt.rs
crates/magritte-common/: Cargo.toml
crates/magritte-common/src/: cstr.rs  lib.rs  size.rs  spv.rs  version.rs
crates/magritte-gc/: Cargo.toml
crates/magritte-gc/src/: lib.rs
crates/magritte-hl/: Cargo.toml
crates/magritte-hl/src/: context.rs  device.rs  queue.rs
crates/magritte-parse/: Cargo.toml
crates/magritte-parse/src/: expr.rs  externally_synced.rs  lib.rs  name.rs  ty.rs  (+1 more)
crates/magritte-rg/: Cargo.toml
crates/magritte-shaders/: Cargo.toml
crates/magritte-types/: Cargo.toml
crates/magritte-types/src/: alias.rs  basetype.rs  bitflag.rs  bitmask.rs  command.rs  const.rs  enum.rs  expr.rs  extension.rs  funcpointer.rs  handle.rs  lib.rs  opaque.rs  origin.rs  reference.rs  struct.rs  symbols.rs  tag.rs  ty.rs  union.rs  vendor.rs
crates/magritte-utils/: Cargo.toml
crates/magritte-vma/: Cargo.toml  build.rs  wrapper.cpp
doc/: PFN_vkAllocationFunction$alignment.md  PFN_vkAllocationFunction$size.md  PFN_vkAllocationFunction.md  PFN_vkFreeFunction$p_memory.md  PFN_vkFreeFunction$p_user_data.md  PFN_vkFreeFunction.md  PFN_vkInternalAllocationNotification.md  PFN_vkInternalFreeNotification$allocation_scope.md  PFN_vkInternalFreeNotification$allocation_type.md  PFN_vkInternalFreeNotification$size.md  PFN_vkInternalFreeNotification.md  PFN_vkReallocationFunction$allocation_scope.md  PFN_vkReallocationFunction$p_original.md  PFN_vkReallocationFunction.md  PFN_vkVoidFunction.md  VK_ATTACHMENT_UNUSED.md  VK_FALSE.md  VK_LOD_CLAMP_NONE.md  VK_LUID_SIZE.md  VK_MAX_DESCRIPTION_SIZE.md  VK_MAX_DEVICE_GROUP_SIZE.md  VK_MAX_DRIVER_INFO_SIZE.md  VK_MAX_DRIVER_NAME_SIZE.md  VK_MAX_EXTENSION_NAME_SIZE.md  VK_MAX_GLOBAL_PRIORITY_SIZE_KHR.md  VK_MAX_MEMORY_HEAPS.md  VK_MAX_MEMORY_TYPES.md  VK_MAX_PHYSICAL_DEVICE_NAME_SIZE.md  VK_QUEUE_FAMILY_EXTERNAL.md  VK_QUEUE_FAMILY_FOREIGN_EXT.md  VK_QUEUE_FAMILY_IGNORED.md  VK_REMAINING_ARRAY_LAYERS.md  VK_REMAINING_MIP_LEVELS.md  VK_SHADER_UNUSED_KHR.md  VK_SUBPASS_EXTERNAL.md  VK_TRUE.md  VK_UUID_SIZE.md  VK_VERSION_1_0.md  VK_VERSION_1_1.md  VK_VERSION_1_2.md  (+3224 more)
host/magritte-native-host/: Cargo.toml
host/magritte-wasm-host/: Cargo.toml
levels/: level1.ron  level2.ron  level3.ron
magritte/: Cargo.toml  build.rs  wrapper.h
magritte-build/: Cargo.toml
magritte-build/src/: extensions.rs  imports.rs  lib.rs  origin.rs  ugly_diff_paths.rs
magritte-build/src/exec/: common.rs  edge_case.rs  expr.rs  hl.rs  main.rs  native.rs  native_api.rs
magritte-build/src/exec/hl/: expr.rs  fields.rs  functions.rs  simple.rs
magritte-build/src/exec/hl/functions/: arguments.rs
magritte-build/src/exec/native/: bitflags.rs  bits.rs  const.rs  field.rs
magritte-gc/: Cargo.toml
magritte-gc/src/: channel.rs  lib.rs
magritte-hl/: Cargo.toml
magritte-hl/src/: context.rs  device.rs  lib.rs  queue.rs
magritte-shaders/: Cargo.toml
magritte-vk/: Cargo.toml
magritte-vk/src/: lib.rs
magritte-vkgen/: Cargo.toml
magritte-vkgen/src/: codegen.rs  doc.rs  expr.rs  imports.rs  lib.rs  main.rs  name.rs  origin.rs  rustmft.rs  source.rs  symbols.rs  ty.rs  visitors.rs
magritte-vkgen/src/codegen/: basetypes.rs  bitflags.rs  bitmasks.rs  constants.rs  enums.rs  expr.rs  extensions.rs  funcpointers.rs  functions.rs  handle_enum.rs  handles.rs  mod.rs  opaques.rs  ty.rs  unions.rs
magritte-vkgen/src/codegen/functions/: field.rs  raw.rs  wrapped.rs
magritte-vkgen/src/codegen/handles/: loader.rs
magritte-vkgen/src/codegen/structs/: raw.rs
magritte-vkgen/src/doc/: html.rs
magritte-vkgen/src/expr/: string.rs
magritte-vkgen/src/source/: alias.rs  basetypes.rs  bitflags.rs  bitmasks.rs  commands.rs  consts.rs  enums.rs  extensions.rs  funcpointers.rs  handles.rs  opaque.rs  reference.rs  structs.rs  tag.rs  unions.rs  vendors.rs
magritte-vkgen/src/source/commands/: sync.rs
magritte-vkgen/src/source/structs/: sync.rs
magritte-vkgen/src/visitors/: doc.rs  features.rs  handle.rs  native.rs  types.rs  wasm.rs
magritte-vkgen/src/visitors/native/: const_ty.rs  struct_base.rs
magritte-vkgen/src/wasm/: mod.rs
magritte-vma/: Cargo.toml  bindings.rs  build.rs
magritte-vma/src/: allocation.rs  allocator.rs  buffer.rs  defragmentation_context.rs  ffi.rs  flags.rs  image.rs  lib.rs  pool.rs  virtual_allocation.rs  virtual_block.rs
magritte/src/: chaining.rs  commands.rs  context.rs  conv.rs  cstr.rs  descriptors.rs  entry.rs  fence.rs  handles.rs  helpers.rs  lib.rs  loading.rs  memory.rs  results.rs  size.rs  spv.rs  utils.rs  validation.rs  version.rs  video.rs  window.rs
samples/: Cargo.toml
samples/src/: buffer.rs  cache.rs  commands.rs  depth.rs  lib.rs  queue.rs  render_target.rs  renderpass.rs  shader.rs  simple.rs  surface.rs  vulkan.rs
samples/src/bins/: simple.rs  texture.rs  triangle.rs  triangle_hl.rs
samples/src/bins/simple/: pipeline.rs  renderpass.rs
samples/src/bins/texture/: pipeline.rs
samples/src/bins/texture/shaders/: texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
samples/src/bins/triangle/: pipeline.rs
samples/src/bins/triangle/shaders/: triangle.frag  triangle.vert  triangle.vert.spv
(+3295 files in other folders)
