[workspace]
members = [
    "crates/magritte-parse",
    "crates/magritte-common",
    "crates/magritte-types",
    "crates/magritte-utils",
    "bins/magritte-ron-build",
    "bins/magritte-doc-build",
    "host/magritte-native-host",
    "host/magritte-wasm-host",
    "backend/magritte-wasm-backend",
    "backend/magritte-native-backend",
    "magritte",
    "magritte-vkgen",
]