[package]
name = "magritte-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "magritte-build"
path = "src/exec/main.rs"

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.1.1", features = ["derive"] }
magritte-types = { version = "0.1.0", path = "../crates/magritte-types", features = [ "codegen" ] }
proc-macro2 = "1.0.49"
quote = "1.0.23"
ron = "0.8.0"
