[package]
name = "magritte-vkgen"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/Dherse/magritte"
readme = "../README.md"
keywords = [ "vulkan", "bindings", "generator", "codegen"]
categories = [ "development-tools::ffi", "api-bindings" ]
description = "Bindings generator for the Vulkan backend of Magritte"

[dependencies]
# Tracing printer
tracing-subscriber = { version = "0.3.7", features = [ "time", "env-filter" ] }

# Tracing provider
tracing = "0.1.29"

# Rust code generation utilities
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = [ "full" ]}
quote = "1.0.15"

# Faster hash map
ahash = "0.7.6"

# Small vec optimization.
smallvec = { version = "1.8.0", features = [ "union", "specialization", "const_generics", "serde", "const_new" ] }

# HTML scraper (for building the doc)
scraper = "0.12.0"
ego-tree = "^0.6"

# vk.xml parser
vk-parse = "0.7.0"

# Regex parsing
regex = "1.5.4"

# Convert name formatting
convert_case = "0.5.0"

# Expression parsing
nom = "7.1.0"

# Bit flags
bitflags = "1.3.2"

# Parallel iterators for parallel code geneeration
rayon = "1.5.1"

# Lazy constant evaluation
lazy_static = "1.4"

# Smoller and faster allocator
# The `default-features = false` disables some security features
# that are not needed for a code generator that is run manually once.
mimalloc = { version = "0.1.27", default-features = false}

# Parsing of the Cargo manifest for automatic feature generation
cargo_toml = "0.11.5"
toml = "0.5.8"

# Python runtime to solve length equations
[dependencies.pyo3]
version = "0.16.2"
features = ["auto-initialize"]