[package]
name = 'magritte-vma'
edition = '2021'
version = '0.1.0'
build = 'build.rs'
description = 'Vulkan Memory Allocator for Magritte'
readme = '../README.md'
keywords = [
    'vulkan',
    'GFX',
    'GPU',
    'graphics',
    'bindings',
    'VMA',
    'memory',
]
categories = [
    'api-bindings',
    'game-development',
    'graphics',
    'rendering',
]
license-file = '../LICENSE'
repository = 'https://github.com/Dherse/magritte'

[features]
default = [ "log" ]
recording = []


[dependencies.log]
version = "0.4.16"
optional = true

[dependencies.bitflags]
version = "1.3.2"

[dependencies.magritte]
path = "../magritte"
features = [
    "VK_KHR_dedicated_allocation",
    "VK_KHR_buffer_device_address",
    "VK_EXT_memory_budget",
    "VK_EXT_memory_priority",
    "VK_AMD_device_coherent_memory",
    "VK_KHR_bind_memory2",
    "VK_KHR_get_physical_device_properties2",
    "VK_KHR_maintenance4",
    "VK_KHR_external_memory",
]

[dependencies.smallvec]
version = '1.8.0'
features = [
    'const_new',
    'const_generics',
    'union',
]

[build-dependencies]
cc = "1.0.73"