[package]
name = 'magritte'
edition = '2021'
version = '0.1.0'
description = 'A high performance, high level graphics API around Vulkan'
readme = '../README.md'
keywords = [
    'vulkan',
    'GFX',
    'GPU',
    'graphics',
    'bindings',
]
categories = [
    'api-bindings',
    'game-development',
    'graphics',
    'rendering',
]
license-file = '../LICENSE'
repository = 'https://github.com/Dherse/magritte'
