[package]
name = "magritte-samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "triangle"
path = "src/bins/triangle.rs"

[[bin]]
name = "texture"
path = "src/bins/texture.rs"

[dependencies]
winit = "0.26.1"
log = "0.4.16"
pretty_env_logger = "0.4.0"
crossbeam-channel = "0.5.4"

[dependencies.smallvec]
version = '1.8.0'
features = [
    'const_new',
    'const_generics',
    'union',
]

[dependencies.clap]
version = "3.1.16"
features = [
    "derive"
]

[dependencies.bytemuck]
version = '1.9.1'
features = [ "derive" ]

[dependencies.magritte]
path = "../magritte"
default-features = false
features = [ 
    "libloading", 
    "validation",
    "smallvec", 
    "window",
    "VK_KHR_swapchain",
    "VK_EXT_debug_utils",
    "VK_EXT_debug_marker",
    "VK_KHR_sampler_ycbcr_conversion",
]

[dependencies.magritte-vma]
path = "../magritte-vma"