[package]
name = "magritte-samples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "triangle"
path = "src/bins/triangle.rs"

[dependencies]
winit = "0.27.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
crossbeam-channel = "0.5.6"

[dependencies.smallvec]
version = '1.9.0'
features = [
    'const_new',
    'const_generics',
    'union',
]

[dependencies.clap]
version = "3.1.16"
features = [
    "derive"
]

[dependencies.bytemuck]
version = '1.9.1'
features = [ "derive" ]

[dependencies.magritte]
path = "../magritte"
default-features = false
features = [ 
    "libloading", 
    "validation",
    "smallvec", 
    "window",
    "VK_KHR_swapchain",
    "VK_EXT_debug_utils",
]

[dependencies.magritte-vma]
path = "../magritte-vma"