[package]
name = "magritte-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
magritte-types = { version = "0.1.0", path = "../magritte-types", features = [ "codegen" ] }
proc-macro2 = "1.0.49"
quote = "1.0.23"