[package]
name = "magritte-gc"
version = "0.1.0"
edition = "2021"

[features]
default = [ "crossbeam", "parking_lot" ]
crossbeam = [ "crossbeam-channel"]

[dependencies]
magritte = { path = "../magritte" }

magritte-vma = { path = "../magritte-vma" }

magritte-hl = { path = "../magritte-hl" }

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.parking_lot]
version = "0.12"
optional = true