[package]
name = "magritte-hl"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vulkan Memory Allocator
magritte-vma = { path = "../magritte-vma" }

# Error handling
thiserror = "1.0"

# Logging facilities
log = "0.4"

# Faster mutexes
parking_lot = "0.12"

# Faster hashing algorithm
ahash = "0.8.2"

# Vulkan bindings
[dependencies.magritte]
path = "../magritte"
features = [
    "window",
    "VK_KHR_swapchain",
    "VK_EXT_validation_features",
    "VK_EXT_debug_utils",
    "validation",
]