[package]
name = "magritte-rg"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vulkan Memory Allocator
magritte-vma = { path = "../magritte-vma" }

# High level Vulkan wrappers
magritte-hl = { path = "../magritte-hl" }

# Garbage collector
magritte-gc = { path = "../magritte-gc" }

# Vulkan bindings
[dependencies.magritte]
path = "../magritte"
features = [
    "libloading",
    "log",
    "smallvec",
    "bindgen",
    "window",
    "validation",
]