[package]
name = "magritte-types"
version = "0.1.0"
edition = "2021"

[features]
codegen = ["proc-macro2", "quote"]

[dependencies]
bitflags = "1.3.2"
heck = "0.4.0"
rayon = "1.6.1"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }

proc-macro2 = { version = "1.0.49", optional = true}
quote = { version = "1.0.23", optional = true}